# f3demo

./: Cargo.toml  README.md  memory.x  openocd.gdb
src/: lib.rs  main.rs
