[package]
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "f3demo"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-itm = "0.4.1"
libm = "0.1.4"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"

# this lets you use `cargo fix`!
[[bin]]
name = "f3demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
